# rs-inventory-mgt

./: .gitmodules  .travis.yml  Cargo.toml  MasterInventory.csv  README.md  newmaster.csv
benches/: my_benchmark.rs
docs/: aliases.js  search-index.js  source-files.js
docs/clap/: struct.OsValues.html  struct.Values.html
docs/csv/: all.html  enum.DeserializeErrorKind.html  enum.ErrorKind.html  enum.QuoteStyle.html  enum.Terminator.html  enum.Trim.html  fn.invalid_option.html  index.html  struct.ByteRecord.html  struct.ByteRecordIter.html  struct.ByteRecordsIntoIter.html  struct.ByteRecordsIter.html  struct.DeserializeError.html  struct.DeserializeRecordsIntoIter.html  struct.DeserializeRecordsIter.html  struct.Error.html  struct.FromUtf8Error.html  struct.IntoInnerError.html  struct.Position.html  struct.Reader.html  struct.ReaderBuilder.html  struct.StringRecord.html  struct.StringRecordIter.html  struct.StringRecordsIntoIter.html  struct.StringRecordsIter.html  struct.Utf8Error.html  struct.Writer.html  struct.WriterBuilder.html  type.Result.html
docs/csv_core/: all.html  enum.QuoteStyle.html  enum.ReadFieldNoCopyResult.html  enum.ReadFieldResult.html  enum.ReadRecordNoCopyResult.html  enum.ReadRecordResult.html  enum.Terminator.html  enum.WriteResult.html  fn.is_non_numeric.html  fn.quote.html  index.html  struct.Reader.html  struct.ReaderBuilder.html  struct.Writer.html  struct.WriterBuilder.html
docs/hashbrown/: all.html  enum.CollectionAllocErr.html  index.html  struct.HashMap.html  struct.HashSet.html
src/: lib.rs
tests/: external_process.py
(+478 files in other folders)
