[package]
name = "inventory-mgt"
version = "0.1.0"
authors = ["Peter Farr <Peter@PrismaPhonic.com>"]
edition = "2018"

[badges]
travis-ci = { repository = "PrismaPhonic/rs-inventory-mgt", branch = "master" }
maintenance = { status = "actively-developed" }

[[bin]]
doc = false
name = "inventory_mgt"
path = "src/bin/inventory_mgt.rs"

[[bench]]
name = "my_benchmark"
harness = false

[dependencies]
structopt = "0.2.14"
csv = "1.0.5"
serde_derive = "1.0.87"
serde = "1.0.87"
rayon = "1.0.3"
hashbrown = "0.1.8"
indexmap = "1.0.2"

[dev-dependencies]
criterion = "0.2.10"
